infra/k8s/elasticsearch-persistent.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
          resources:
            requests:
              memory: "2Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: esdata
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: esdata
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
