infra/k8s/keycloak-persistent.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.0
          args: [ "start-dev", "--import-realm", "--proxy-headers=xforwarded" ]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: h2data
              mountPath: /opt/keycloak/data
            - name: realm
              mountPath: /opt/keycloak/data/import
              readOnly: true
      volumes:
        - name: h2data
          persistentVolumeClaim:
            claimName: keycloak-h2-pvc
        - name: realm
          configMap:
            name: keycloak-realm
