infra/k8s/minio-persistent.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          command:
            - /bin/bash
            - -c
          args:
            - |
              mkdir -p /data/images;
              mkdir -p /data/videos;
              (sleep 10 && 
              mc alias set minio http://minio:9000 <<anonymized>> <<anonymized>> &&
              mc admin policy create minio user-access /tmp/policies/user-access-policy.json;
              mc event add minio/images arn:minio:sqs::UPLOAD_PIPELINE:webhook --event put;
              mc event add minio/videos arn:minio:sqs::UPLOAD_PIPELINE:webhook --event put) &
              minio server /data --console-address :9090
          volumeMounts:
            - name: miniodata
              mountPath: /data
            - name: policies
              mountPath: /tmp/policies
              readOnly: true
      volumes:
        - name: miniodata
          persistentVolumeClaim:
            claimName: minio-pvc
        - name: policies
          configMap:
            name: minio-policy
